Apply suggestions from content review
Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

--- a/src/pages/components/dropdown/style.mdx
+++ b/src/pages/components/dropdown/style.mdx
@@ -40,7 +40,7 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 </Row>
 
 <Caption>
-  Dropdown variant examples: default, inline, multi-select, combo-box.
+  Dropdown variant examples: default, inline, multiselect, combo box.
 </Caption>
 
 ### Interactive states
@@ -77,7 +77,7 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 </Column>
 </Row>
 
-<Caption>Dropdown and combo-box states</Caption>
+<Caption>Dropdown and combo box states</Caption>
 
 <Row>
 <Column colLg={12}>
@@ -87,7 +87,7 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 </Column>
 </Row>
 
-<Caption>Multi-select dropdown states</Caption>
+<Caption>Multiselect dropdown states</Caption>
 
 ### Inline loading
 
@@ -119,7 +119,7 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 </Column>
 </Row>
 
-<Caption>Inline dropdown states.</Caption>
+<Caption>Inline dropdown states</Caption>
 
 ## Typography
 
@@ -195,11 +195,11 @@ can be applied to all variants of dropdown.
 
 <div className="image--fixed">
 
-![Spacing for combo-box dropdown](images/dropdown-style-6.png)
+![Spacing for combo box dropdown](images/dropdown-style-6.png)
 
 </div>
 
-<Caption>Spacing for combbo-box dropdown | px / rem</Caption>
+<Caption>Spacing for combo box dropdown | px / rem</Caption>
 
 ### Multiselect dropdown
 
