--- a/src/pages/all-about-carbon/partners.mdx
+++ b/src/pages/all-about-carbon/partners.mdx
@@ -6,6 +6,8 @@ description:
   direction, governance, and support.
 ---
 
+import { dividedSection } from '../../styles/Layout.module.scss';
+
 <PageDescription>
 
 Carbon is not just one team. To sustain productive contribution and maintain a
@@ -17,21 +19,60 @@ direction, governance, and support.
 ## Steering committee
 
 The Carbon Design System steering committee provides oversight and direction for
-Carbon and its design and development community. It is made up of Carbon
-practitioners to ensure Carbon stays true to the community we're serving.
+Carbon and its design and development community, to improve the Carbon Design
+System for IBM and the world. It is made up of Carbon practitioners to ensure
+Carbon stays true to the community we’re serving.
 
-### Committee responsibilities
+<Row className={dividedSection}>
+<Column colMd={2} colLg={4}>
 
-- Improve design strategy, quality, and consistency within the design system and
-  our guidance to ensure excellence.
-- Promote and support usage of, and contribution to, the Carbon Design System
-  within their organizations.
-- Assist with the alignment and standardization of components, patterns,
-  content, and tooling to ensure consistency of design standards and resources
-  across teams and business units.
-- Highlight projects of high potential business value, and assist with finding
-  collaborators and resources.
-- Provide a quarterly update to the advisory board.
+#### Drive impactful human and business outcomes
+
+</Column>
+<Column colMd={6} colLg={8}>
+
+The steering committee represents the voice of the customer and business,
+reflecting the diverse objectives of the IBM Design and development community.
+We ensure Carbon Design System delivers business value, which in turn drives
+outcomes that people love.
+
+</Column>
+</Row>
+
+<Row className={dividedSection}>
+<Column colMd={2} colLg={4}>
+
+#### Scale design consistency and excellence
+
+</Column>
+<Column colMd={6} colLg={8}>
+
+The steering committee provides line of sight into our respective patterns and
+best practices. By doing so, we support the community effort to improve the
+consistency of the human experience. To scale excellence, we share successes,
+either from using Carbon, or as input to improving Carbon. As a committee, we
+amplify key projects of high potential business value to influence Carbon's
+priorities.
+
+</Column>
+</Row>
+
+<Row className={dividedSection}>
+<Column colMd={2} colLg={4}>
+
+#### Grow and strengthen the community
+
+</Column>
+<Column colMd={6} colLg={8}>
+
+The steering committee engages our respective networks of collaborators and
+resources to consume, contribute to, and innovate Carbon. We feed a virtuous
+cycle in which Carbon advocacy grows by freeing Designers and Developers to
+focus on higher level solutions, which they contribute back into Carbon.  This
+increases the internal and external eminence of Carbon Design System and IBM.
+
+</Column>
+</Row>
 
 <h3
   class="AutolinkHeader-module--header--1G1tm Markdown-module--h3--Gwbvh"
