fix: update content for design kit
New:
- Added maintainer name and link to bluepages

Changed:
- Updated design kit link

--- a/src/pages/community/patterns/chatbot/overview.mdx
+++ b/src/pages/community/patterns/chatbot/overview.mdx
@@ -7,6 +7,10 @@ description:
 tabs: ['Overview', 'Usage', 'Flows', 'Content']
 ---
 
+#### Maintainers:
+
+[Sarah Liu](https://w3.ibm.com/bluepages/profile.html?uid=5G1630897)
+
 import { Tag, Link } from 'carbon-components-react';
 
 <PageDescription>
@@ -125,7 +129,7 @@ guidance related to your use case.
     title="Chatbot Design Kit"
     aspectRatio="2:1"
     actionIcon="download"
-    href="https://sketch.cloud/s/k8j5g">
+    href="sketch://add-library/cloud/d6986eb8-bf0d-4695-abe8-9e79909d4518">
     <MdxIcon name="sketch" />
   </ResourceCard>
 </Column>
