fix: update content for design kit (#2120)
* fix: update content for design kit

New:
- Added maintainer name and link to bluepages

Changed:
- Updated design kit link

* edit: move maintainer section

--- a/src/pages/community/patterns/chatbot/overview.mdx
+++ b/src/pages/community/patterns/chatbot/overview.mdx
@@ -13,6 +13,10 @@ tabs: ['Overview', 'Usage', 'Flows', 'Content']
 
 import { Tag, Link } from 'carbon-components-react';
 
+#### Maintainers:
+
+[Sarah Liu](https://w3.ibm.com/bluepages/profile.html?uid=5G1630897)
+
 <PageDescription>
 
 Use a chatbot when a user would benefit from requesting information on-demand
