--- a/src/pages/components/radio-button/usage.mdx
+++ b/src/pages/components/radio-button/usage.mdx
@@ -25,10 +25,9 @@ one selection from the group is allowed.
 
 ## Overview
 
-Radio buttons represent a group of mutually exclusive choices, compared to
-checkboxes that allow users to make one or more selections from a group. In use
-cases where only one selection from a group is allowed, use the radio button
-component instead of the checkbox.
+Radio buttons are used for mutually exclusive choices, not for multiple choices.
+Only one radio button should be selected at a time. When a user chooses a new
+item, the previous choice is automatically deselected.
 
 ## Live demo
 
