--- a/src/pages/components/radio-button/usage.mdx
+++ b/src/pages/components/radio-button/usage.mdx
@@ -83,6 +83,20 @@ item, the previous choice is automatically deselected.
 
 ## Format
 
+### When to use
+
+**Forms**
+
+Can be used in forms on a full page, in modals, or on side panels.
+
+**Settings**
+
+Used to change from one setting to another in a menu, page, or component.
+
+**Selection in lists**
+
+Used to choose a singular item within data tables or lists.
+
 #### Headings
 
 If necessary, a heading can accompany a set of radio buttons to provide further
