--- a/src/pages/components/radio-button/usage.mdx
+++ b/src/pages/components/radio-button/usage.mdx
@@ -83,19 +83,21 @@ item, the previous choice is automatically deselected.
 
 ## Format
 
-### When to use
+#### When to use
 
-**Forms**
+**Forms** Can be used in forms on a full page, in modals, or on side panels.
 
-Can be used in forms on a full page, in modals, or on side panels.
+**Settings** Used to change from one setting to another in a menu, page, or
+component.
 
-**Settings**
+**Selection in lists** Used to choose a singular item within data tables or
+lists.
 
-Used to change from one setting to another in a menu, page, or component.
+### When not to use
 
-**Selection in lists**
-
-Used to choose a singular item within data tables or lists.
+If a user can select many option from a list, use checkboxes instead of radio
+buttons. Radio buttons allow the user to select only one item in a set whereas
+checkboxes allow the user to select multiple options.
 
 #### Headings
 
