update: combobox usage docs and anatomy labels

--- a/src/pages/components/dropdown/usage.mdx
+++ b/src/pages/components/dropdown/usage.mdx
@@ -41,11 +41,11 @@ functionality—dropdown, multiselect, and combo box.
 
 ### Variants
 
-| Variant                     | Purpose                                                                                                  |
-| --------------------------- | -------------------------------------------------------------------------------------------------------- |
-| [Dropdown](#dropdown)       | Allows the user to select one option from a list.                                                        |
-| [Multiselect](#multiselect) | Allows the user to select multiple options from a list and filter.                                       |
-| [Combo box](#combo-box)     | Allows a user to enter any value, or select a value from a list of suggested, likely, or desired values. |
+| Variant                     | Purpose                                                                                |
+| --------------------------- | -------------------------------------------------------------------------------------- |
+| [Dropdown](#dropdown)       | Allows the user to select one option from a list.                                      |
+| [Multiselect](#multiselect) | Allows the user to select multiple options from a list and filter.                     |
+| [Combo box](#combo-box)     | Allows a user to make a selection from a list of suggested, likely, or desired values. |
 
 #### When to use
 
@@ -193,11 +193,12 @@ when making a selection.
 </Column>
 </Row>
 
-1. **Labels and helper text (optional):** Assistive text to help the user make a
-   selection.
-2. **Field:** Persists when the dropdown is open or closed.
-3. **Option:** A list of multiple options to select from within a menu.
-4. **Menu:** Displayed as an open state and contains a list of options to select
+1. **Labels:** Text that informs the user what to expect in the list of dropdown
+   options.
+2. **Helper text:** Assistive text to help the user choose the right selection.
+3. **Field:** Persists when the dropdown is open or closed.
+4. **Option:** A list of multiple options to select from within a menu.
+5. **Menu:** Displayed as an open state and contains a list of options to select
    from.
 
 ### Sizing
@@ -422,7 +423,7 @@ or clicking outside of the menu.
   the `Up arrow`.
 - Users can close the dropdown menu by pressing `Escape`, `Space`, or `Enter`.
 
-#### Combo box and filtering:
+#### Combo box:
 
 - When typing a character: focus stays on the field while an option in the menu
   is highlighted that best matches the typed character.
@@ -592,7 +593,8 @@ typically used when there are a large amount of options to choose from.
 </Row>
 
 - The menu opens by clicking anywhere in the field and you can start typing to
-  sort through the list of options. The option that best matches the typed characters is highlighted.
+  sort through the list of options. The option that best matches the typed
+  characters is highlighted.
 - After typing text in the field, the close (x) icon appears to the right of the
   text in the field. This clears any text that’s been entered in the field.
 
@@ -705,8 +707,9 @@ While the dropdown and combo box look similar they have different functions.
 
 - With a dropdown list, the selected option is always visible, and the other
   options are visible by clicking and opening the list.
-- A combo box is a combination of a standard list box or a dropdown list and an
-  editable text box and users are able to enter a value that isn't in the list.
+- A combo box is a combination of a standard list box or a dropdown list that
+  lets you type inside the input field to find an option that best represents
+  your inputted value.
 
 ## References
 
