update: remove optional text

--- a/src/pages/components/dropdown/usage.mdx
+++ b/src/pages/components/dropdown/usage.mdx
@@ -182,8 +182,8 @@ functionality—dropdown, multiselect, and combo box.
 
 Dropdowns are composed of four distinct sections—assistive text like labels or
 helper text, a field, a menu, and options contained within the menu. Labels and
-helper text are optional but can guide the user to make an informed decision
-when making a selection.
+helper text can guide the user to make an informed decision when making a
+selection.
 
 <Row>
 <Column colLg={8}>
