--- a/src/pages/components/dropdown/usage.mdx
+++ b/src/pages/components/dropdown/usage.mdx
@@ -45,7 +45,7 @@ functionality—dropdown, multiselect, and combo box.
 | --------------------------- | -------------------------------------------------------------------------------------- |
 | [Dropdown](#dropdown)       | Allows the user to select one option from a list.                                      |
 | [Multiselect](#multiselect) | Allows the user to select multiple options from a list and filter.                     |
-| [Combo box](#combo-box)     | Allows a user to make a selection from a list of suggested, likely, or desired values. |
+| [Combo box](#combo-box)     | Allows the user to make a selection from a list of suggested, likely, or desired values. |
 
 #### When to use
 
