--- a/src/pages/components/dropdown/usage.mdx
+++ b/src/pages/components/dropdown/usage.mdx
@@ -197,7 +197,7 @@ selection.
    options.
 2. **Helper text:** Assistive text to help the user choose the right selection.
 3. **Field:** Persists when the dropdown is open or closed.
-4. **Option:** A list of multiple options to select from within a menu.
+4. **Option:** A choice for the user, shown with other choices in a menu.
 5. **Menu:** Displayed as an open state and contains a list of options to select
    from.
 
