--- a/src/pages/components/dropdown/usage.mdx
+++ b/src/pages/components/dropdown/usage.mdx
@@ -198,7 +198,7 @@ selection.
 2. **Helper text:** Assistive text to help the user choose the right selection.
 3. **Field:** Persists when the dropdown is open or closed.
 4. **Option:** A choice for the user, shown with other choices in a menu.
-5. **Menu:** Displayed as an open state and contains a list of options to select
+5. **Menu:** A list of options to choose from, displayed as an open state.
    from.
 
 ### Sizing
