--- a/src/pages/components/dropdown/usage.mdx
+++ b/src/pages/components/dropdown/usage.mdx
@@ -425,7 +425,7 @@ or clicking outside of the menu.
 
 #### Combo box:
 
-- When typing a character: focus stays on the field while an option in the menu
+- When typing a character, focus stays on the field while an option in the menu
   is highlighted that best matches the typed character.
 - When typing multiple characters in rapid succession: focus stays on the field
   while an option in the menu is highlighted that best matches the string of
