--- a/src/pages/components/dropdown/usage.mdx
+++ b/src/pages/components/dropdown/usage.mdx
@@ -708,7 +708,7 @@ While the dropdown and combo box look similar they have different functions.
 - With a dropdown list, the selected option is always visible, and the other
   options are visible by clicking and opening the list.
 - A combo box is a combination of a standard list box or a dropdown list that
-  lets you type inside the input field to find an option that best represents
+  lets users type inside the input field to find an option that matches
   your inputted value.
 
 ## References
