--- a/src/pages/components/dropdown/usage.mdx
+++ b/src/pages/components/dropdown/usage.mdx
@@ -709,7 +709,7 @@ While the dropdown and combo box look similar they have different functions.
   options are visible by clicking and opening the list.
 - A combo box is a combination of a standard list box or a dropdown list that
   lets users type inside the input field to find an option that matches
-  your inputted value.
+  their inputted value.
 
 ## References
 
