update: interactions section

--- a/src/pages/components/dropdown/usage.mdx
+++ b/src/pages/components/dropdown/usage.mdx
@@ -41,10 +41,10 @@ functionality—dropdown, multiselect, and combo box.
 
 ### Variants
 
-| Variant                     | Purpose                                                                                |
-| --------------------------- | -------------------------------------------------------------------------------------- |
-| [Dropdown](#dropdown)       | Allows the user to select one option from a list.                                      |
-| [Multiselect](#multiselect) | Allows the user to select multiple options from a list and filter.                     |
+| Variant                     | Purpose                                                                                  |
+| --------------------------- | ---------------------------------------------------------------------------------------- |
+| [Dropdown](#dropdown)       | Allows the user to select one option from a list.                                        |
+| [Multiselect](#multiselect) | Allows the user to select multiple options from a list and filter.                       |
 | [Combo box](#combo-box)     | Allows the user to make a selection from a list of suggested, likely, or desired values. |
 
 #### When to use
@@ -198,8 +198,7 @@ selection.
 2. **Helper text:** Assistive text to help the user choose the right selection.
 3. **Field:** Persists when the dropdown is open or closed.
 4. **Option:** A choice for the user, shown with other choices in a menu.
-5. **Menu:** A list of options to choose from, displayed as an open state.
-   from.
+5. **Menu:** A list of options to choose from, displayed as an open state. from.
 
 ### Sizing
 
@@ -427,7 +426,7 @@ or clicking outside of the menu.
 
 - When typing a character, focus stays on the field while an option in the menu
   is highlighted that best matches the typed character.
-- When typing multiple characters in rapid succession: focus stays on the field
+- When typing multiple characters in rapid succession, focus stays on the field
   while an option in the menu is highlighted that best matches the string of
   characters typed.
 
@@ -708,8 +707,8 @@ While the dropdown and combo box look similar they have different functions.
 - With a dropdown list, the selected option is always visible, and the other
   options are visible by clicking and opening the list.
 - A combo box is a combination of a standard list box or a dropdown list that
-  lets users type inside the input field to find an option that matches
-  their inputted value.
+  lets users type inside the input field to find an option that matches their
+  inputted value.
 
 ## References
 
