--- a/src/pages/components/checkbox/style.mdx
+++ b/src/pages/components/checkbox/style.mdx
@@ -50,7 +50,7 @@ should not exceed three words.
 | Class                 | Font-size (px/rem) | Font-weight   | Type token       |
 | --------------------- | ------------------ | ------------- | ---------------- |
 | `.bx--label`          | 12 / 0.75          | Regular / 400 | `$label-01`      |
-| `.bx--checkbox-label` | 14 / 0.875         | Regualr / 400 | `$body-short-01` |
+| `.bx--checkbox-label` | 14 / 0.875         | Regular / 400 | `$body-short-01` |
 
 ## Structure
 
