Update images in community Create pattern (#2054)
* delete unused images

* replace correct side panel images

* Update side panel and full page images

* lighter pink circles for full page

Co-authored-by: Andrea Garcia <garciaam@us.ibm.com>
Co-authored-by: Alessandra Davila <aledavila@ibm.com>
Co-authored-by: Alison Joseph <alisonejoseph@Gmail.com>

--- a/src/pages/community/patterns/create-flows/index.mdx
+++ b/src/pages/community/patterns/create-flows/index.mdx
@@ -159,7 +159,7 @@ respectively.
 <Row>
 <Column colLg={8}>
 
-![Alignment of a create side panel](images/SidePanelAlignment.png)
+![Alignment of a create side panel](images/SidePanelAlignment.jpg)
 
 </Column>
 </Row>
@@ -364,7 +364,7 @@ consequences, show a modal alerting them that the changes won't be saved.
 <Row>
 <Column colLg={8}>
 
-![Full page anatomy](images/FullPageAnatomy80px.jpg)
+![Full page anatomy](images/FullPageAnatomy64px.jpg)
 
 </Column>
 </Row>
