feat(color): add link 02 token

--- a/src/pages/guidelines/themes/overview.mdx
+++ b/src/pages/guidelines/themes/overview.mdx
@@ -107,7 +107,7 @@ $carbon--theme--white: (
   icon-02: #565656,
   icon-03: #ffffff,
   link-01: #0062ff,
-  field-01: #f3f3f3,
+  link-02: #0043ce; field-01: #f3f3f3,
   field-02: #ffffff,
   inverse-01: #ffffff,
   inverse-02: #3d3d3d,
@@ -207,6 +207,7 @@ $icon-01: #171717 !default;
 $icon-02: #565656 !default;
 $icon-03: #ffffff !default;
 $link-01: #0062ff !default;
+$link-02: #0043ce !default;
 $field-01: #f3f3f3 !default;
 $field-02: #ffffff !default;
 $inverse-01: #ffffff !default;
