--- a/src/pages/guidelines/themes/overview.mdx
+++ b/src/pages/guidelines/themes/overview.mdx
@@ -107,7 +107,8 @@ $carbon--theme--white: (
   icon-02: #565656,
   icon-03: #ffffff,
   link-01: #0062ff,
-  link-02: #0043ce; field-01: #f3f3f3,
+  link-02: #0043ce,
+  field-01: #f3f3f3,
   field-02: #ffffff,
   inverse-01: #ffffff,
   inverse-02: #3d3d3d,
