--- a/src/pages/components/radio-button/usage.mdx
+++ b/src/pages/components/radio-button/usage.mdx
@@ -29,7 +29,7 @@ one selection from the group is allowed.
 ## Overview
 
 Radio buttons are used for mutually exclusive choices, not for multiple choices.
-Only one radio button should be selected at a time. When a user chooses a new
+Only one radio button can be selected at a time. When a user chooses a new
 item, the previous choice is automatically deselected.
 
 ### When to use
