--- a/src/pages/components/radio-button/usage.mdx
+++ b/src/pages/components/radio-button/usage.mdx
@@ -166,7 +166,7 @@ for easier reading.
 
 <Caption>Vertically stacked versus horizontal alignment</Caption>
 
-For languages that read left to right, it's acceptable to place labels to the
+For languages that read right to left, it's acceptable to place labels to the
 left of the inputs.
 
 <Row>
