docs(DataTable): update storybook links

--- a/src/pages/components/data-table/usage.mdx
+++ b/src/pages/components/data-table/usage.mdx
@@ -90,7 +90,7 @@ import {
     knobs={{ DataTable: ['isSortable'], Table: ['size', 'useZebraStyles'] }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/datatable--default',
+        'https://react.carbondesignsystem.com/?path=/story/datatable--usage',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-table--basic',
       Vue:
@@ -129,7 +129,7 @@ import {
     knobs={{ DataTable: ['isSortable'], Table: ['size', 'useZebraStyles'] }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/datatable--with-selection',
+        'https://react.carbondesignsystem.com/?path=/story/datatable-selection--usage',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-table--basic',
       Vue:
@@ -177,7 +177,7 @@ import {
     knobs={{ DataTable: ['isSortable'] }}
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/datatable--with-expansion',
+        'https://react.carbondesignsystem.com/?path=/story/datatable-expansion--usage',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-table--with-expansion',
       Vue:
@@ -225,7 +225,7 @@ import {
     id="with-batch-actions"
     links={{
       React:
-        'https://react.carbondesignsystem.com/?path=/story/datatable--with-batch-actions',
+        'https://react.carbondesignsystem.com/?path=/story/datatable-batch-actions--usage',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-table--with-toolbar',
       Vue:
@@ -569,9 +569,9 @@ should be closed by default, and placed below the table title.
 
 #### Open search
 
-The search field can appear always open on a data table. The field is
-placed on the left side of the table under the table title and stretches until
-it meets the actions on the right.
+The search field can appear always open on a data table. The field is placed on
+the left side of the table under the table title and stretches until it meets
+the actions on the right.
 
 <Row>
 <Column colLg={8}>
@@ -635,10 +635,10 @@ the items.
 
 ### Radio selection
 
-Instead of a multiselect checkbox function, the data table supports a
-single selection radio button control. Only one row can be selected at a time
-when using the radio selection. The radio button is placed in the first column
-on the left side.
+Instead of a multiselect checkbox function, the data table supports a single
+selection radio button control. Only one row can be selected at a time when
+using the radio selection. The radio button is placed in the first column on the
+left side.
 
 <Row>
 <Column colLg={12}>
@@ -655,8 +655,8 @@ row is accompanied by
 an [overflow menu](https://www.carbondesignsystem.com/components/overflow-menu/code) that
 contains actions related specifically to that row.
 
-When the overflow menu contains fewer than three options, keep the actions inline
-as icon buttons instead. This reduces a click and makes available actions
+When the overflow menu contains fewer than three options, keep the actions
+inline as icon buttons instead. This reduces a click and makes available actions
 visible at a glance.
 
 <Row>
