--- a/src/pages/components/code-snippet/usage.mdx
+++ b/src/pages/components/code-snippet/usage.mdx
@@ -81,23 +81,21 @@ length use cases—inline, single line, and multi-line.
     knobs={{ CodeSnippet: ['light'] }}
     links={{
       React:
-        'http://react.carbondesignsystem.com/?path=/story/codesnippet--inline',
+        'https://react.carbondesignsystem.com/?path=/story/codesnippet--singleline',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-code-snippet--basic',
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=code-snippet',
     }}>{`
-    <CodeSnippet type="single">
-    {codeSnippet}
-    </CodeSnippet>
+    <CodeSnippet type="single">${codeSnippetSingle}</CodeSnippet>
 `}</ComponentVariant>
   <ComponentVariant
     id="code-snippet-multi"
     knobs={{ CodeSnippet: ['light'] }}
     links={{
       React:
-        'http://react.carbondesignsystem.com/?path=/story/codesnippet--inline',
+        'https://react.carbondesignsystem.com/?path=/story/codesnippet--multiline',
       Angular:
         'https://angular.carbondesignsystem.com/?path=/story/components-code-snippet--basic',
       Vue:
@@ -120,7 +118,7 @@ length use cases—inline, single line, and multi-line.
         'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=code-snippet',
     }}>{`
-    <CodeSnippet type="inline">{codeSnippetSingle}</CodeSnippet>
+    <CodeSnippet type="inline">${codeSnippetSingle}</CodeSnippet>
 `}</ComponentVariant>
 </ComponentDemo>
 
