update Sketch resource card link

--- a/src/pages/guidelines/2x-grid/overview.mdx
+++ b/src/pages/guidelines/2x-grid/overview.mdx
@@ -33,7 +33,7 @@ creative decision-making.
 <Column colMd={4} colLg={4} noGutterSm>
   <ResourceCard
     subTitle="IBM Grid Template"
-    href="https://sketch.cloud/s/ngV7z"
+    href="https://sketch.cloud/s/3a3f3f2d-94d7-4c16-8e2e-88ba80a6382e"
     >
       <MdxIcon name="sketch" />
   </ResourceCard>
