--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -76,7 +76,7 @@ actions.
 | _Secondary_ | For secondary actions on each page. Secondary buttons can only be used  in conjunction with a primary button. As part of a pair, the secondary button's function is to perform the negative action of the set, such as Cancel or Back. Do not use a secondary button in isolation and do not use a button for a positive action. |
 | _Tertiary_  | For less prominent, and sometimes independent, actions. Tertiary buttons can be used in isolation  or paired with a primary button when there are multiple calls to action. Tertiary buttons can also be used for sub-tasks on a page where a primary button for the main and final action is present.                           |
 | _Danger_    | For actions that could have destructive effects on the user’s data  (for example, delete or remove). Danger button has three styles: primary, tertiary, and ghost.                                                                                                                                                               |
-| _Ghost_     | For the least pronounced actions. Ghost buttons are often used in conjunction with a primary button, or with a primary and secondary button pair.                                                                                                                                                                                |
+| _Ghost_     | For the least pronounced actions; often used in conjunction with a primary button. In a situation such as a progress flow, a ghost button may be paired with a primary and secondary button set, where the primary button is for forward action, the secondary button is for "Back", and the ghost button is for "Cancel".       |
 
 ## Live demo
 
