Fixed  some more typos

--- a/src/pages/components/accordion/accessibility.mdx
+++ b/src/pages/components/accordion/accessibility.mdx
@@ -362,7 +362,7 @@ Accessibility issues are tracked in the
               </ListItem>
               <ListItem>
                 To expand or collapse the accordion, doubletap on the header, or
-                press Control+Option+Space. VoiceOver announces, exapnaded or
+                press Control+Option+Space. VoiceOver announces, expanded or
                 collapses.
               </ListItem>
               <ListItem>
