--- a/src/pages/components/breadcrumb/accessibility.mdx
+++ b/src/pages/components/breadcrumb/accessibility.mdx
@@ -278,7 +278,7 @@ Accessibility issues are tracked in the
               </ListItem>
               <ListItem>
                 Talkback also announces entering and exiting the nested lists,
-                the number of list items, nesting level, and contnt of the list
+                the number of list items, nesting level, and content of the list
                 item.
               </ListItem>
               <ListItem>
