--- a/src/pages/components/data-table/accessibility.mdx
+++ b/src/pages/components/data-table/accessibility.mdx
@@ -45,7 +45,7 @@ be updated when these accessibility issues are resolved.
 
 - [W3C WAI-ARIA Authoring Practices Table Design Pattern](https://www.w3.org/TR/wai-aria-practices-1.1/#table)
   covers the usage of ARIA names, state and roles, as well as the expected
-  keyboard intractions.
+  keyboard interactions.
 - [W3C Tutorial - Table Concepts](https://www.w3.org/WAI/tutorials/tables/)
   covers the usage of various tables, headers, and captions.
 - [IBM Accessibility Checklist Checkpoint](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html):
