--- a/src/pages/components/dropdown/accessibility.mdx
+++ b/src/pages/components/dropdown/accessibility.mdx
@@ -48,7 +48,7 @@ be updated when these accessibility issues are resolved.
 
 - [W3C WAI-ARIA Authoring Practices Listbox Design Pattern](https://www.w3.org/TR/wai-aria-practices-1.1/#Listbox)
   covers the usage of ARIA names, state and roles, as well as the expected
-  keyboard intractions.
+  keyboard interactions.
 - [IBM Accessibility Checklist Checkpoint](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html):
   - [2.4.7 Focus Visible](https://www.ibm.com/able/guidelines/ci162/focus_visible.html)
     (WCAG Success Criteria
