--- a/src/pages/components/list/accessibility.mdx
+++ b/src/pages/components/list/accessibility.mdx
@@ -307,7 +307,7 @@ Accessibility issues are tracked in the
               </ListItem>
               <ListItem>
                 Talkback also announces entering or exiting nested lists. Number
-                of list items, nesteing levels, and content of the list item.
+                of list items, nesting levels, and content of the list item.
               </ListItem>
               <ListItem>
                 Bullets and numbers are announced separately from the list item
