--- a/src/pages/components/toggle/accessibility.mdx
+++ b/src/pages/components/toggle/accessibility.mdx
@@ -149,7 +149,7 @@ Accessibility issues are tracked in the
                 is a checkbox and the label.
               </ListItem>
               <ListItem>
-                Press the Tab key and the disabled toogle component is skipped.
+                Press the Tab key and the disabled toggle component is skipped.
               </ListItem>
               <ListItem>
                 Control-Option-Left arrow key back to the disabled toggle
@@ -184,7 +184,7 @@ Accessibility issues are tracked in the
                 is a checkbox and the label.
               </ListItem>
               <ListItem>
-                Press the Tab key and the disabled toogle component is skipped.
+                Press the Tab key and the disabled toggle component is skipped.
               </ListItem>
               <ListItem>
                 Control-Option-Left arrow key back to the disabled toggle
