--- a/src/pages/developing/get-started.mdx
+++ b/src/pages/developing/get-started.mdx
@@ -5,7 +5,7 @@ description:
   a checklist of everything you need to get up and running.
 ---
 
-<!-- this page is a work in progresss -->
+<!-- this page is a work in progress -->
 
 <PageDescription>
 
