--- a/src/pages/guidelines/2x-grid/implementation.mdx
+++ b/src/pages/guidelines/2x-grid/implementation.mdx
@@ -641,7 +641,7 @@ caused a lot of confusion, the intent is simply to enable more typographic
 alignment. With the Narrow grid, the container, not the type, hangs 16px into
 the gutter; allowing headings and copy outside of containers to align with the
 copy within containers and components. This arrangement can easily be mirrored
-to accomodate languages that read right to left, like Arabic or Hebrew.
+to accommodate languages that read right to left, like Arabic or Hebrew.
 
 Rows that are adjacent will have 16px of margin between them to match gutter.
 Use vertical helpers here.
