--- a/src/pages/patterns/filtering/index.mdx
+++ b/src/pages/patterns/filtering/index.mdx
@@ -80,7 +80,7 @@ attribute to modify the data results. Under the hood, multiselects behave like
 <Row>
 <Column colLg={8}>
 
-![Example of a milti-selection filter in a checkbox set](images/filter-2.png)
+![Example of a multi-selection filter in a checkbox set](images/filter-2.png)
 
 <Caption>Example of a multiselect filter in a checkbox set</Caption>
 
