--- a/src/pages/patterns/global-header/index.mdx
+++ b/src/pages/patterns/global-header/index.mdx
@@ -274,7 +274,7 @@ needs.
 
 Structuring content by your audience takes into account the role or permissions
 tied to that persona. This can highlight more common tasks related to that
-persona, but can also decrease dicoverability if tasks overlap personas or your
+persona, but can also decrease discoverability if tasks overlap personas or your
 user occasionally shifts between roles.
 
 #### Alphabetically
