--- a/src/pages/patterns/login-pattern/index.mdx
+++ b/src/pages/patterns/login-pattern/index.mdx
@@ -233,9 +233,9 @@ multiple server errors, the inline notifications should stack.
 <Row>
 <Column colLg={8}>
 
-![Example of a server-side notificaiton on a login flow.](./images/5_Login_inline_error_736.png)
+![Example of a server-side notification on a login flow.](./images/5_Login_inline_error_736.png)
 
-<Caption>Example of a server-side notificaiton on a login flow</Caption>
+<Caption>Example of a server-side notification on a login flow</Caption>
 
 </Column>
 </Row>
