--- a/src/pages/components/checkbox/accessibility.mdx
+++ b/src/pages/components/checkbox/accessibility.mdx
@@ -64,7 +64,7 @@ content to this component.
 
 - [W3C WAI-ARIA Authoring Practices Checkbox Design Pattern](https://www.w3.org/TR/wai-aria-practices/examples/checkbox/checkbox-1/checkbox-1.html)
   covers the usage of ARIA names, state and roles, as well as the expected
-  keyboard intractions.
+  keyboard interactions.
 - [IBM Accessibility Checklist Checkpoint:](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html)
   - [1.3.1 Information and Relationships](https://www.ibm.com/able/guidelines/ci162/info_and_relationships.html)
     (WCAG Success Criteria
