--- a/src/pages/components/date-picker/accessibility.mdx
+++ b/src/pages/components/date-picker/accessibility.mdx
@@ -42,7 +42,7 @@ be updated when these accessibility issues are resolved.
 
 - [W3C WAI-ARIA Authoring Practices Date Picker Design Pattern](https://www.w3.org/TR/wai-aria-practices/examples/dialog-modal/datepicker-dialog.html)
   covers the usage of ARIA names, state and roles, as well as the expected
-  keyboard intractions.
+  keyboard interactions.
 - [IBM Accessibility Checklist Checkpoint](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html):
   - [1.3.1 Info and Relationships](https://www.ibm.com/able/guidelines/ci162/info_and_relationships.html)
     (WCAG Success Criteria
