--- a/src/pages/components/modal/accessibility.mdx
+++ b/src/pages/components/modal/accessibility.mdx
@@ -70,7 +70,7 @@ content to this component.
 
 - [W3C WAI-ARIA Authoring Practices Dialog Modal Design Pattern](https://www.w3.org/TR/wai-aria-practices-1.1/#dialog_modal)
   covers the usage of ARIA names, state and roles, as well as the expected
-  keyboard intractions.
+  keyboard interactions.
 - [IBM Accessibility Checklist Checkpoint](https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html):
   - [1.4.13 Content on Hover or Focus](https://www.ibm.com/able/guidelines/ci162/no_keyboard_trap.html)
     (WCAG Success Criteria
