--- a/src/pages/components/notification/style.mdx
+++ b/src/pages/components/notification/style.mdx
@@ -2,7 +2,7 @@
 title: Notification
 description:
   Notifications are messages that communicate information to the user. The two
-  main types of notificaitons are toast notifications and inline notifications.
+  main types of notifications are toast notifications and inline notifications.
 tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 ---
 
