--- a/src/pages/components/slider/code.mdx
+++ b/src/pages/components/slider/code.mdx
@@ -77,7 +77,7 @@ documentation, see the Storybooks for each framework below.
   max={100}
   min={0}
   step={1}
-  stepMuliplier={4}
+  stepMultiplier={4}
   value={50}
 />
 </div>
